--- a/index.html
+++ b/index.html
@@ -43,18 +43,18 @@
           <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
           <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="https://github.com/cesco-dev" target="_blank" class="google-plus"><i class="bx bxl-github"></i></a>
+          <a href="https://github.com/Ayotayo1689" target="_blank" class="google-plus"><i class="bx bxl-github"></i></a>
           <a href="https://www.linkedin.com/in/badejo-ayotayo-24118b251/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
 
       <nav id="navbar" class="nav-menu navbar">
         <ul>
-          <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
-          <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
-          <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-          <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
-          <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Contact</span></a></li>
+          <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span style="font-size: 17px;font-weight:800;">Home</span></a></li>
+          <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span style="font-size: 17px;font-weight:800;">About</span></a></li>
+          <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span style="font-size: 17px;font-weight:800;">Resume</span></a></li>
+          <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span style="font-size: 17px;font-weight:800;">Portfolio</span></a></li>
+          <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-server"></i> <span style="font-size: 17px;font-weight:800;">Contact</span></a></li>
           <!-- <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li> -->
         </ul>
       </nav><!-- .nav-menu -->
@@ -182,7 +182,7 @@
               <h4>Badejo Ayotayo.P</h4>
               <p><em>Innovative and time-conscious web developer with close to a year of expertise in user-centered responsive website page development from initial concept to completed output.</em></p>
               <ul>
-                <li><a href="https://github.com/cesco-dev">github:cesco-dev hello//</a></li>
+                <li>github:<a href="https://github.com/Ayotayo1689">Ayotayo1689</a></li>
                 <li>linkedin:<a href="https://www.linkedin.com/in/badejo-ayotayo-24118b251/">badejo-ayotayo</a></li>
                 <li>ayotayobadejo@gmail.com</li>
               </ul>  
@@ -328,7 +328,7 @@
 
         </div>
 
-      </div>
+      </div>  
     </section><!-- End Portfolio Section -->
 
     
