--- a/index.html
+++ b/index.html
@@ -238,30 +238,30 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="images/desktop-preview.jpg" class="img-fluid" alt>
+              <img src="images/loopstudio.jpg" class="img-fluid" alt>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/desktop-preview.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
-                <a href="/" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://loopstudio-kappa-five.vercel.app/" ><i class="bx bx-plus"></i></a>
+                <a href="https://loopstudio-kappa-five.vercel.app/" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="images/desktop-prev.jpg" class="img-fluid" alt>
+              <img src="images/samdor.jpg" class="img-fluid" alt>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/desktop-prev.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="/" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://samdor.vercel.app/" ><i class="bx bx-plus"></i></a>
+                <a href="https://samdor.vercel.app/" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="images/desktop-previews.jpg" class="img-fluid" alt>
+              <img src="images/easybank.jpg" class="img-fluid" alt>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/desktop-previews.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
-                <a href="/" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://loopstudio-kappa-five.vercel.app/easy.html" ><i class="bx bx-plus"></i></a>
+                <a href="https://loopstudio-kappa-five.vercel.app/easy.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -365,14 +365,14 @@
                 <p>+234 812 812 1061 <br>+234 704 211 3375</p>
               </div>
 
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3964.1290138689315!2d3.3875154!3d6.505348399999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b8cf2f1c05691%3A0xc91340957e49b75d!2sIwaya%20Rd%2C%20Lagos%20Mainland%20101245%2C%20Ikeja!5e0!3m2!1sen!2sng!4v1658495238832!5m2!1sen!2sng" width="100%" height="290px" frameborder="0" style="border:0;" allowfullscreen loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3390.944412961858!2d3.3884830142666447!3d6.541413324770868!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b8d1215e0de15%3A0x5e9b257d6b0e5e57!2sAdemolu%20St%2C%20Somolu%20102216%2C%20Ikeja!5e1!3m2!1sen!2sng!4v1664539776141!5m2!1sen!2sng" width="100%" height="290px" frameborder="0" style="border:0;" allowfullscreen loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
               <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe> -->
             </div>
 
           </div>
 
-          <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
+          <div class="col-lg-7 mt-5 mt-lg-0 d-flex ">
             <form action="https://formspree.io/f/mpznwldw" method="post" role="form" class="php-email-form">
               <div class="row">
                 <div class="form-group col-md-6">
