updated the file

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <img src="images/headshot.jpg" class="img-fluid" alt>
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>Fullstack Web Developer(Frontend/Backend).</h3>
+            <h3 style="width: 80%;">Fullstack Web Developer(Frontend/Backend).</h3>
             <p class="fst-italic">
               I'm being prepared to employ cutting-edge web technologies to create engaging and practical landing pages, e-commerce websites, restaurant websites, etc.</p>
             <div class="row">
@@ -236,6 +236,17 @@
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <div class="portfolio-wrap">
+              <img src="images/nupat.jpg" class="img-fluid" alt>
+              <div class="portfolio-links">
+                <a href="https://nupat.com.ng/"><i class="bx bx-plus"></i></a>
+                <a href="https://nupat.com.ng/" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="images/loopstudio.jpg" class="img-fluid" alt>
@@ -266,21 +277,13 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-wrap">
-              <img src="images/previewing.jpg" class="img-fluid" alt>
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/previewing.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
-                <a href="/" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
+          
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <img src="images/desktop-previewing.jpg" class="img-fluid" alt>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/desktop-previewing.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/desktop-previewing.jpg"><i class="bx bx-plus"></i></a>
                 <a href="/" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -290,7 +293,7 @@
             <div class="portfolio-wrap">
               <img src="images/desktop-previewest.jpg" class="img-fluid" alt>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/desktop-previewest.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/desktop-previewest.jpg" ><i class="bx bx-plus"></i></a>
                 <a href="/" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -300,7 +303,7 @@
             <div class="portfolio-wrap">
               <img src="images/desktop-previewsy.jpg" class="img-fluid" alt>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/desktop-previewsy.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/desktop-previewsy.jpg" ><i class="bx bx-plus"></i></a>
                 <a href="/" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -310,7 +313,7 @@
             <div class="portfolio-wrap">
               <img src="images/lively%20packs.jpg" class="img-fluid" alt>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/lively packs.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 3"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/lively packs.jpg" ><i class="bx bx-plus"></i></a>
                 <a href="/" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -320,7 +323,7 @@
             <div class="portfolio-wrap">
               <img src="images/desktop-previeworst.jpg" class="img-fluid" alt>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/desktop-previeworst.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/desktop-previeworst.jpg" ><i class="bx bx-plus"></i></a>
                 <a href="/" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -372,8 +375,8 @@
 
           </div>
 
-          <div class="col-lg-7 mt-5 mt-lg-0 d-flex ">
-            <form action="https://formspree.io/f/mpznwldw" method="post" role="form" class="php-email-form">
+          <div class="col-lg-7 mt-5 mt-lg-0 d-flex " >
+            <form action="https://formspree.io/f/mpznwldw" method="post" role="form" class="php-email-form" style="width: 95%;" >
               <div class="row">
                 <div class="form-group col-md-6">
                   <label for="name">Your Name</label>
