--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <img src="images/headshot1.jpg" alt class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Badejo P. Ayotayo </a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+          <a href="https://twitter.com/ayotayo123" class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
           <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
           <a href="https://github.com/Ayotayo1689" target="_blank" class="google-plus"><i class="bx bxl-github"></i></a>
@@ -85,7 +85,7 @@
             <img src="images/headshot.jpg" class="img-fluid" alt>
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3 style="width: 80%;">Fullstack Web Developer(Frontend/Backend).</h3>
+            <h3 style="width: 80%; margin-right: 2em;">Fullstack Web Developer(Frontend/Backend).</h3>
             <p class="fst-italic">
               I'm being prepared to employ cutting-edge web technologies to create engaging and practical landing pages, e-commerce websites, restaurant websites, etc.</p>
             <div class="row">
@@ -333,6 +333,7 @@
 
       </div>  
     </section><!-- End Portfolio Section -->
+    
 
     
 
