--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <img src="images/headshot.jpg" class="img-fluid" alt>
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3 style="width: 80%; margin-right: 2em;">Fullstack Web Developer(Frontend/Backend).</h3>
+            <h3 style="width: 80%; margin-right: 2em;">Fullstack Web Developer(Front/Backend).</h3>
             <p class="fst-italic">
               I'm being prepared to employ cutting-edge web technologies to create engaging and practical landing pages, e-commerce websites, restaurant websites, etc.</p>
             <div class="row">
@@ -220,7 +220,7 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>A Fullstack (front-end/backend) developer with close to a year of experience in user-centered responsive web page design and development from initial concept to final output that is deadline-driven and creative.</p>
+          <p>A Fullstack (frontend/backend) developer with close to a year of experience in user-centered responsive web page design and development from initial concept to final output that is deadline-driven and creative.</p>
         </div>
 
         <div class="row" data-aos="fade-up">
